2008-11-04 Holger Vogt
 * frontend/numparam/xpressn.c: agauss, sinh, cosh tanh, added (source: S. Thiel)
 * b3soi*ld.c: _isnan defined for _MSC_VER
 * main.c, cmath2.c, xpressn.c: random, srandom defined extern for _MSC_VER
 * math/misc/equality.c: llabs defined extern

2008-11-23 Lionel Sainte Cluque
 * COPYING: update many details and tclspice LGPLv2
 * src/tclspice.c: changed headers for LGPLv2

2008-11-23 Lionel Sainte Cluque
 * configure.in: modified for tclspinit.in
 * src/tclspinit.in: spinit file for tclspice (at least until installation of
  codemodels is solved)
 * src/Makefile.am: modified for tclspinit installation
 * src/frontend/cpitf.c: modified for use of tclspinit in tclspice

2008-11-04 Holger Vogt
 * /doc/version.texi committed again
 * /visualc/include/config.h: version no. 18
 * /frontend/com_ftt: tfree, copyright notice

2008-11-22 Lionel Sainte Cluque
 * COPYING: license clarifications
 * frontend/inpcom.c: minor changes (correct warning)
 * frontend/misccoms.c: minor changes (correct warning)
 * frontend/where.c: minor changes (correct warning)
 * spicelib/parser/inpgmod.c: minor changes (correct warning)
 * spicelib/parser/inppas3.c: minor changes (correct warning)
 * spicelib/devices/numd/numdload.c: minor changes (correct warning)
 * spicelib/devices/numd2/nud2load.c: minor changes (correct warning)
 * xspice/mif/mifsetup.c: minor changes (correct warning)
 * xspice/ipc/ipcsockets.c: minor changes (correct warning)
 * ciderlib/input/mobset.c: minor changes (correct warning)
 * include/spmatrix.h: minor changes (correct warning)
 * tclspice.c: minor changes (correct warning)
 * frontend/com_fft.c : changed some malloc into tmalloc
 * frontend/com_measure2.c : changed some malloc into tmalloc
 * spicelib/devices/bsim3/b3temp.c: changed some malloc into tmalloc
 * spicelib/devices/bsim3soi/b4soitemp.c: changed some malloc into tmalloc
 * spicelib/devices/bsim3v32/b3v32temp.c: changed some malloc into tmalloc